Fix reload state, solved card, spacing and sizing, reset rack after incorrect, prevent submitting solved or surrendered puzzles

--- a/liwords-ui/src/puzzles/puzzles.scss
+++ b/liwords-ui/src/puzzles/puzzles.scss
@@ -29,6 +29,18 @@
         margin-left: 0;
       }
     }
+    @media (min-width: $screen-laptop-min) {
+      .instructions {
+        font-size: 15px;
+        margin: 36px 0 18px;
+      }
+    }
+    @media (min-width: $screen-desktop-min) {
+      .progress {
+        margin: 24px 0 36px;
+        font-size: 15px;
+      }
+    }
   }
   .player-cards.ant-card .mini-player {
     .player-avatar {
@@ -39,6 +51,11 @@
     }
     .ant-row.player {
       padding: 6px;
+    }
+    @media (min-width: $screen-desktop-min) {
+      .ant-row.player {
+        padding: 18px 6px;
+      }
     }
   }
   .ant-card.puzzle-info {
@@ -95,6 +112,18 @@
   .progress {
     margin: 18px 0 18px;
     font-weight: 700;
+  }
+  .data-area .notepad-card {
+    display: none;
+    @media (min-width: $screen-tablet-min) {
+      display: block;
+      .ant-card-body {
+        height: auto;
+      }
+    }
+    @media (min-width: $screen-laptop-min) {
+      display: none;
+    }
   }
 }
 .puzzle-container .stars, .ant-modal-body .stars {
